--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,8 @@
 <%# navigation styled for Zurb Foundation 4 %>
-<nav class="top-bar">
+<!-- <nav class="top-bar row">
+
   <ul class="title-area">
-    <li class="name"><%= link_to 'Home', root_path %></li>
+    <li class="name"><%= link_to 'Shane Tjong-Akiet', root_path %></li>
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
   <div class="top-bar-section">
@@ -9,4 +10,45 @@
       <%= render 'layouts/navigation_links' %>
     </ul>
   </div>
-</nav>
+</nav> -->
+<div class="bg">
+	<p>Testing</p>
+</div>
+<section>
+
+<div class='column'>
+<h2>Shane Tjong-Akiet</h2>
+
+<h4>"Believe you can and you're halfway there."</h4>
+<cite>Theodore Roosevelt </cite>
+
+<br><br><br>
+<!-- <h2>Working Hard -->
+</div>
+
+<div class='column'>
+<ul class='nav'>
+<li>Home</li>
+<li>About</li>
+<li>Portfolio</li>
+<li>Hire Me ?</li>
+</ul>
+<!--<div class='bg'>
+ <%#= image_tag("test.png")%>
+<div class="widget-container widget-avatar boxed boxed-yellow">
+                        <div class="inner">
+                            <h5>Shane Tjong-Akiet</h5>
+                            <span class="subtitle">Web Developer</span>
+                            <div class="avatar"><%= image_tag("test.png") %></div>
+                            
+                           
+                        </div>
+                    </div>
+
+</section> -->
+<!-- <div class='main-image'>
+<h1>Determination</h1>
+<%= image_tag("test.png") %>
+</div>
+</div> -->
+ </div>
