--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -1,14 +1,54 @@
 // import the CSS framework
 @import "foundation";
 
+.bg {
+
+height: 2em;
+background: rgba(0, 0, 0, 0.4);
+}
+body{
+
+// background-image: url("bg2.png");
+
+}
+h2 {
+ color: rgb(92, 92, 92);
+  font-family: 'Source Sans Pro', sans-serif;
+font-weight: 800;
+letter-spacing: -2px;
+font-size: 3.5em;
+}
+h3 {
+color: rgba(39, 39, 39, 0.78);
+font-family: 'Source Sans Pro', sans-serif;
+font-weight: 500;
+letter-spacing: -2px;
+font-size: 2.0em;
+line-height: auto;
+
+}
+h4{
+color: rgba(70, 70, 70, 0.78);
+font-family: 'Source Sans Pro', sans-serif;
+font-weight: 300;
+font-size: 1.2em;
+line-height: 1.8em;
+
+}
 // override for the 'Home' navigation link
+.top-bar {
+ 
+}
 .top-bar .name {
-  font-size: 0.8125em;
+
+  font-size: 2em;
   line-height: 45px; }
 .top-bar .name a {
-  font-weight: bold;
-  color: white;
-  padding: 0 15px; }
+ font-weight: bold;
+color: rgb(253, 253, 253);
+padding: 0em 15px;
+background: rgba(0, 0, 0, 0.44);
+}
 
 // use mixins to create semantic classes
 // these are examples you can modify
@@ -23,7 +63,7 @@
   }
 main {
   @include twelve-columns;
-  background-color: #eee;
+ background:rgba(192, 71, 71, 0.92);
   }
 section {
   @extend .row;
@@ -42,3 +82,278 @@ section {
   @extend .button;
   @extend .radius;
   }
+  header {
+// background-image: url('assets/bg2.png');
+// background-repeat: repeat-y;
+padding: 0em 0 8em 0;
+background: url("022.jpg") no-repeat;
+background-position-x: -2em;
+background-position-y: -34em;
+
+  }
+footer {
+
+}
+footer p {
+  font-size:1.2em;
+}
+.test {
+width: 60%;
+border-radius: 0.5em 0.5em;
+
+}
+
+   .widget-avatar .inner {
+padding: 34px 25px 22px;
+text-align: center;
+background: #FFFFFF;
+width: 50%;
+float: right;
+border: 2px solid rgb(199, 199, 199);
+
+}
+.nav {
+list-style-type: none;
+font-family: 'Source Sans Pro', sans-serif;
+font-weight: 700;
+font-size: 28px;
+display: inline-block;
+text-transform: uppercase;
+letter-spacing: -1px;
+margin: 1em 0 0 5em;
+
+}
+.nav li {
+margin: 10px 0 0 0;
+background: #D6D6D6;
+color: #535353;
+width: 100%;
+float: left;
+}
+.nav li:hover {
+background: rgba(36, 36, 36, 0.18);
+color: rgb(20, 20, 20);
+}
+.widget-avatar h5{
+    font-size: 18px;
+    font-weight: 700;
+    font-style: normal;
+    color: #56462a;
+    margin-bottom: 6px;
+}
+.widget-avatar .subtitle,
+.widget-avatar .followers{
+    font-size: 12px;
+    font-weight: 400;
+    color: #836d48;
+}
+.widget-avatar .subtitle{
+    display: block;
+    margin-bottom: 23px;
+}
+.widget-avatar .avatar{
+    width: 100px;
+    height: 100px;
+    margin: 0 auto 22px;
+    border: 2px solid #a1875c;
+    padding: 3px;
+    border-radius: 50%;
+}
+.widget-avatar .avatar img{
+    display: block;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+}
+.followers{margin-bottom: 43px;}
+
+.btn-follow{
+    display: block;
+}
+.btn-follow span{
+    font-size: 13px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    text-shadow:0 -1px 0 rgba(0,0,0,0.24);
+}
+.btn-follow i{
+    width: 20px;
+    height: 20px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    vertical-align: text-top;
+}
+.btn-follow i:before,
+.btn-follow i:after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 7px;
+    left: 3px;
+    width: 10px;
+    height: 2px;
+    background: #fff;
+}
+.btn-follow i:after{
+    top: 3px;
+    left: 7px;
+    width: 2px;
+    height: 10px;
+}
+
+main{
+display:block;
+}
+.main-alt{
+position: relative;
+width: 100%;
+
+background:red;
+}
+.test-description {
+ background: #252525;
+position: relative;
+bottom: 4em;
+border-top: 3px solid #E7715B;
+}
+.test-description h3 {
+  color: white;
+font-weight: 300;
+}
+
+section.main-text p {
+  color: rgb(255, 255, 255);
+font-family: 'Source Sans Pro', sans-serif;
+font-weight: 200;
+letter-spacing: 0px;
+font-size: 1.3em;
+
+}
+.main-image {
+width: 60%;
+border: 2px solid rgba(66, 66, 66, 0.15);
+background: #141414;
+float: right;
+}
+
+.main-image h1 {
+color: #FFFFFF;
+font-size: 32px;
+border-bottom: 10px solid #E2705A;
+line-height: 41px;
+text-transform: uppercase;
+letter-spacing: 0px;
+border-radius: 0;
+font-weight: 500;
+}
+
+section.main-social {
+background: rgb(102, 85, 85);
+padding-left: 0.9375em;
+padding-right: 0.9375em;
+max-width: 100%;
+min-height: 150px;
+@include twelve-columns;
+}
+
+ul.action-bar {
+  list-style-type: none;
+}
+footer {
+  
+  background:red;
+}
+@charset "utf-8";
+/* CSS Document */
+
+/* ---------- FONTAWESOME ---------- */
+/* ---------- http://fortawesome.github.com/Font-Awesome/ ---------- */
+/* ---------- http://weloveiconfonts.com/ ---------- */
+
+@import url(http://weloveiconfonts.com/api/?family=zocial);
+
+/* zocial */
+[class*="zocial-"]:before {
+  font-family: 'zocial', sans-serif;
+}
+/* ---------- Action Bar ---------- */
+
+.action-bar li {
+  float: left;
+}
+
+.action-bar a {
+  -webkit-box-shadow: inset 0 -2px rgba(0, 0, 0, .5);
+  box-shadow: inset 0 -2px rgba(0, 0, 0, .5);
+  color: #e7e7e7;
+  display: block;
+  font-size: 32px;
+  height: 64px;
+  line-height: 64px;
+  position: relative;
+  text-align: center;
+  -webkit-transition: background .3s;
+  -moz-transition: background .3s;
+  -ms-transition: background .3s;
+  -o-transition: background .3s;
+  transition: background .3s;
+  width: 64px;
+}
+
+.action-bar a:hover .tooltip {
+  margin-top: 16px;
+  opacity: 1;
+}
+
+.tooltip {
+  border-radius: 3px;
+  font-size: 14px;
+  height: 28px;
+  left: 50%;
+  line-height: 28px;
+  margin: 0 0 0 -50px;
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  -webkit-transition: margin-top .3s, opacity .3s;
+  -moz-transition: margin-top .3s, opacity .3s;
+  -ms-transition: margin-top .3s, opacity .3s;
+  -o-transition: margin-top .3s, opacity .3s;
+  transition: margin-top .3s, opacity .3s;
+  width: 100px;
+}
+
+.tooltip:before {
+  content: "";
+  height: 8px;
+  left: 50%;
+  margin: -4px 0 0 -4px;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  width: 8px;
+}
+
+.like,
+.like .tooltip,
+.like .tooltip:before { background: #65B1F8; }
+.like:hover { background: #65B1F8; }
+
+.favourite,
+.favourite .tooltip,
+.favourite .tooltip:before { background: #c93037; }
+.favourite:hover { background: #b02b32; }
+
+.comment,
+.comment .tooltip,
+.comment .tooltip:before { background: #43438e; }
+.comment:hover { background: #393978; }
+
+.share,
+.share .tooltip,
+.share .tooltip:before { background: #FF8000; }
+.share:hover { background: #FF8000; }
