--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,9 @@
 <% content_for :title do %>Contact<% end %>
-<h3>Contact</h3>
+<section>
+ <div class="column">
 <div class="form">
+<h3>Contact</h3>
+
   <%= simple_form_for @contact do |form| %>
     <%= form.error_notification %>
     <%= form.input :name, autofocus: true %>
@@ -9,3 +12,8 @@
     <%= form.button :submit, 'Submit', class: 'submit' %>
   <% end %>
 </div>
+</div>
+ <div class="column">
+ <h3>Where Am I?</h3>
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?t=m&amp;q=Santa+Barbara,+CA&amp;ie=UTF8&amp;hq=&amp;hnear=Santa+Barbara,+Santa+Barbara+County,+California&amp;z=13&amp;ll=34.42083,-119.69819&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?t=m&amp;q=Santa+Barbara,+CA&amp;ie=UTF8&amp;hq=&amp;hnear=Santa+Barbara,+Santa+Barbara+County,+California&amp;z=13&amp;ll=34.42083,-119.69819&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+</div></section>
