--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -1,20 +1,79 @@
-<% content_for :title do %>Foobar Kadigan<% end %>
-<% content_for :description do %>Website of Foobar Kadigan<% end %>
-<section>
-  <img src="http://lorempixel.com/1170/600/cats/1">
-</section>
-<section>
-  <div class="column">
-    <h2>Stay in touch.</h2>
+<% content_for :title do %>Test Project<% end %>
+<% content_for :description do %>By Shane Tjong-Akiet<% end %>
+
+<section class="test-description">
+  <div class="column small-12">
+<h3>I'm a web developer in pursuit of making quality products with the latest standard industry methods. Designing innovative products to bring new products to life.</h3>
+<p>
+
   </div>
-  <div class="column">
-    <div class="form-centered">
+<!--   <div class="column"> -->
+<!--     <div class="form-centered">
       <%= simple_form_for @visitor do |f| %>
         <%= f.error_notification %>
         <%= f.input :email, label: false, :placeholder => 'Your email address...' %>
         <br/>
         <%= f.button :submit, "Sign up for the newsletter", :class => "submit" %>
       <% end %>
-    </div>
-  </div>
+    </div> -->
+<!--   </div> -->
 </section>
+
+
+<section class="main-text">
+  <div class="column small-12">
+<p>I'm a web developer in pursuit of making quality products with the latest standard industry methods. Designing innovative products to bring new products to life.
+I'm a web developer in pursuit of making quality products with the latest standard industry methods. Designing innovative products to bring new products to life.
+I'm a web developer in pursuit of making quality products with the latest standard industry methods. Designing innovative products to bring new products to life.</p>
+ </div>
+</section>
+</main>
+
+<section class="main-social">
+  <div class="column small-12">
+  <ul class="action-bar clearfix">
+
+      <li>
+        <a href="#" class="like">
+          <span class="zocial-twitter"></span>
+          <span class="tooltip">Follow</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="#" class="favourite">
+          <span class="zocial-googleplus"></span>
+          <span class="tooltip">Circle us</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="#" class="comment">
+          <span class="zocial-facebook"></span>
+          <span class="tooltip">Like us</span>
+        </a>
+      </li>
+
+      <!-- <li>
+        <a href="#" class="share">
+          <span class="zocial-rss"></span>
+          <span class="tooltip">Subscribe</span>
+        </a>
+      </li> -->
+
+    </ul>
+ </div>
+</section>
+<!--   <div class="column"> -->
+<!--     <div class="form-centered">
+      <%= simple_form_for @visitor do |f| %>
+        <%= f.error_notification %>
+        <%= f.input :email, label: false, :placeholder => 'Your email address...' %>
+        <br/>
+        <%= f.button :submit, "Sign up for the newsletter", :class => "submit" %>
+      <% end %>
+    </div> -->
+<!--   </div> -->
+
+
+
